// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HTML Input > should render "InputCheckbox" 1`] = `undefined`;

exports[`HTML Input > should render "InputCheckbox" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputCheckbox" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputCheckbox" with custom props 1`] = `undefined`;

exports[`HTML Input > should render "InputColor" 1`] = `undefined`;

exports[`HTML Input > should render "InputColor" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputColor" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputDate" 1`] = `undefined`;

exports[`HTML Input > should render "InputDate" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputDate" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputDateTime" 1`] = `undefined`;

exports[`HTML Input > should render "InputDateTime" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputDateTime" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputEmail" 1`] = `undefined`;

exports[`HTML Input > should render "InputEmail" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputEmail" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputFile" 1`] = `undefined`;

exports[`HTML Input > should render "InputFile" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputFile" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputMonth" 1`] = `undefined`;

exports[`HTML Input > should render "InputMonth" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputMonth" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputNumber" 1`] = `undefined`;

exports[`HTML Input > should render "InputNumber" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputNumber" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputNumber" with custom props 1`] = `undefined`;

exports[`HTML Input > should render "InputPassword" 1`] = `undefined`;

exports[`HTML Input > should render "InputPassword" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputPassword" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputRadio" 1`] = `
<label
  class="flex flex-row items-center gap-2"
>
  <input
    type="radio"
    value="foo"
  />
   
  <p>
    foo
  </p>
</label>
`;

exports[`HTML Input > should render "InputRadio" as readonly 1`] = `
<label
  class="flex flex-row items-center gap-2"
>
  <input
    readonly=""
    type="radio"
    value="foo"
  />
   
  <p>
    foo
  </p>
</label>
`;

exports[`HTML Input > should render "InputRadio" as required 1`] = `
<label
  class="flex flex-row items-center gap-2"
>
  <input
    required=""
    type="radio"
    value="foo"
  />
   
  <p>
    foo
  </p>
</label>
`;

exports[`HTML Input > should render "InputRadio" with custom props 1`] = `
<label
  class="flex flex-row-reverse items-center gap-2"
>
  <input
    type="radio"
    value="foo"
  />
   
  <p>
    foo
  </p>
</label>
`;

exports[`HTML Input > should render "InputRadio" with custom props 2`] = `
<label
  class="flex flex-row items-center gap-2"
>
  <input
    type="radio"
    value="foo"
  />
   
  <p>
    foo
  </p>
</label>
`;

exports[`HTML Input > should render "InputRadio" with custom props 3`] = `
<label
  class="flex flex-row items-center gap-2"
>
  <input
    type="radio"
    value="1"
  />
   
  <p>
    foo
  </p>
</label>
`;

exports[`HTML Input > should render "InputRange" 1`] = `undefined`;

exports[`HTML Input > should render "InputRange" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputRange" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputSelect" 1`] = `
<option
  value="foo"
>
  foo
</option>
`;

exports[`HTML Input > should render "InputSelect" as readonly 1`] = `
<option
  value="foo"
>
  foo
</option>
`;

exports[`HTML Input > should render "InputSelect" as required 1`] = `
<option
  value="foo"
>
  foo
</option>
`;

exports[`HTML Input > should render "InputTel" 1`] = `undefined`;

exports[`HTML Input > should render "InputTel" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputTel" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputText" 1`] = `undefined`;

exports[`HTML Input > should render "InputText" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputText" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputText" with custom props 1`] = `undefined`;

exports[`HTML Input > should render "InputTextArea" 1`] = `undefined`;

exports[`HTML Input > should render "InputTextArea" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputTextArea" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputTime" 1`] = `undefined`;

exports[`HTML Input > should render "InputTime" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputTime" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputUrl" 1`] = `undefined`;

exports[`HTML Input > should render "InputUrl" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputUrl" as required 1`] = `undefined`;

exports[`HTML Input > should render "InputWeek" 1`] = `undefined`;

exports[`HTML Input > should render "InputWeek" as readonly 1`] = `undefined`;

exports[`HTML Input > should render "InputWeek" as required 1`] = `undefined`;
